; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/liquidio/extr_lio_main.c_lio_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/liquidio/extr_lio_main.c_lio_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { i32 }

@LIO_CFG_TYPE_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.module*, i32, i8*)* @lio_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lio_event(%struct.module* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.module*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.module* %0, %struct.module** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %11 [
    i32 128, label %8
  ]

8:                                                ; preds = %3
  %9 = load i32, i32* @LIO_CFG_TYPE_DEFAULT, align 4
  %10 = call i32 @lio_init_device_list(i32 %9)
  br label %12

11:                                               ; preds = %3
  br label %12

12:                                               ; preds = %11, %8
  ret i32 0
}

declare dso_local i32 @lio_init_device_list(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
